-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.1
-
None
-
3
-
8206
This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>
This issue relates to the following test suite run: http://maloo.whamcloud.com/test_sets/570b8f14-b713-11e2-bd0f-52540035b04c.
The sub-test test_7c failed with the following error:
test failed to respond and timed out
Info required for matching: sanity-quota 7c
Console log from mds:
02:42:32:Lustre: DEBUG MARKER: == sanity-quota test 7c: Quota reintegration (restart mds during reintegration) == 02:41:58 (1367919718) 02:42:32:Lustre: DEBUG MARKER: lctl get_param -n osc.*MDT*.sync_* 02:42:32:Lustre: DEBUG MARKER: lctl set_param fail_val=0 02:42:32:Lustre: DEBUG MARKER: lctl set_param fail_loc=0 02:42:32:Lustre: DEBUG MARKER: /usr/sbin/lctl conf_param lustre.quota.ost=none 02:42:32:Lustre: DEBUG MARKER: /usr/sbin/lctl conf_param lustre.quota.ost=ug 02:42:32:Lustre: DEBUG MARKER: grep -c /mnt/mds1' ' /proc/mounts 02:42:32:Lustre: DEBUG MARKER: umount -d /mnt/mds1 02:42:32:Lustre: Failing over lustre-MDT0000 02:42:32:Lustre: Skipped 1 previous similar message 02:42:32:LustreError: 21170:0:(local_storage.c:184:ls_device_put()) ASSERTION( list_empty(&ls->ls_los_list) ) failed: 02:42:32:LustreError: 21170:0:(local_storage.c:184:ls_device_put()) LBUG 02:42:32:Pid: 21170, comm: umount 02:42:32: 02:42:32:Call Trace: 02:42:32: [<ffffffffa0590895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 02:42:32: [<ffffffffa0590e97>] lbug_with_loc+0x47/0xb0 [libcfs] 02:42:32: [<ffffffffa06e4859>] ls_device_put+0x1a9/0x1e0 [obdclass] 02:42:32: [<ffffffffa06dc6a5>] llog_osd_cleanup+0xc5/0x140 [obdclass] 02:42:32: [<ffffffffa06b772a>] __llog_ctxt_put+0xca/0x140 [obdclass] 02:42:32: [<ffffffffa06b7854>] llog_cleanup+0xb4/0x440 [obdclass] 02:42:32: [<ffffffffa06d0f31>] ? lprocfs_remove+0x31/0x40 [obdclass] 02:42:32: [<ffffffffa06d13ed>] ? lprocfs_obd_cleanup+0x5d/0xb0 [obdclass] 02:42:32: [<ffffffffa0cd7ad5>] mgs_device_fini+0x1c5/0x5a0 [mgs] 02:42:32: [<ffffffffa06f1907>] class_cleanup+0x577/0xda0 [obdclass] 02:42:32: [<ffffffffa06c6ac6>] ? class_name2dev+0x56/0xe0 [obdclass] 02:42:32: [<ffffffffa06f31ec>] class_process_config+0x10bc/0x1c80 [obdclass] 02:42:32: [<ffffffffa06eca13>] ? lustre_cfg_new+0x353/0x7e0 [obdclass] 02:42:32: [<ffffffffa06f3f29>] class_manual_cleanup+0x179/0x6f0 [obdclass] 02:42:32: [<ffffffffa06c6ac6>] ? class_name2dev+0x56/0xe0 [obdclass] 02:42:32: [<ffffffffa072961d>] server_put_super+0x46d/0xf00 [obdclass] 02:42:32: [<ffffffff8118334b>] generic_shutdown_super+0x5b/0xe0 02:42:32: [<ffffffff81183436>] kill_anon_super+0x16/0x60 02:42:32: [<ffffffffa06f5d86>] lustre_kill_super+0x36/0x60 [obdclass] 02:42:32: [<ffffffff81183bd7>] deactivate_super+0x57/0x80 02:42:32: [<ffffffff811a1c4f>] mntput_no_expire+0xbf/0x110 02:42:32: [<ffffffff811a26bb>] sys_umount+0x7b/0x3a0 02:42:32: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b
- is related to
-
LU-3347 (local_storage.c:872:local_oid_storage_init()) ASSERTION( (*los)->los_last_oid >= first_oid ) failed: 0 < 1
-
- Resolved
-